Closed
Bug 1107433
Opened 11 years ago
Closed 2 years ago
[Mac] Profile manager inactive or crashing if pressing CMQ + Q or quitting with menubar items
Categories
(Toolkit :: Startup and Profile System, defect)
Tracking
()
VERIFIED
FIXED
121 Branch
People
(Reporter: clement.lefevre, Assigned: sebcode)
References
Details
Attachments
(2 files)
If you try to quit Firefox using the CMD+Q shortcut or by clicking on Application name then selecting quit have some troubles.
The result is different depending on Firefox version.
On stable (v34), this just does nothing instead of quitting it.
On Developer Edition (v35) and on Nightly, this is causing some kind of freezed state for the Profile Selection window, leading the user to be unable to select profile, run Firefox on one profile or quitting it. The only thing the user can do following that is to kill Firefox process to be able to run it again.
100% reproducing.
| Reporter | ||
Comment 1•11 years ago
|
||
This bug is still present on current versions: v36 stable and 39 nightly.
NI on lhenry as another mozillian told me you could check for it (especially, if the component is well chosen).
Flags: needinfo?(lhenry)
Comment 2•11 years ago
|
||
Hi Clément, thanks for the bug report and the update! I just tried this on Firefox 39 and 36 on MacOS 10.10 with a clean profile and did not have trouble quitting.
Does this happen if you start in Firefox safe mode? (https://support.mozilla.org/en-US/kb/troubleshoot-firefox-issues-using-safe-mode)
You might also try some of the steps here: https://support.mozilla.org/en-US/kb/firefox-hangs-or-not-responding#w_firefox-hangs-when-you-quit-it
Flags: needinfo?(lhenry)
| Reporter | ||
Comment 3•11 years ago
|
||
(In reply to Liz Henry :lizzard from comment #2)
> Hi Clément, thanks for the bug report and the update! I just tried this on
> Firefox 39 and 36 on MacOS 10.10 with a clean profile and did not have
> trouble quitting.
>
> Does this happen if you start in Firefox safe mode?
> (https://support.mozilla.org/en-US/kb/troubleshoot-firefox-issues-using-safe-
> mode)
>
> You might also try some of the steps here:
> https://support.mozilla.org/en-US/kb/firefox-hangs-or-not-
> responding#w_firefox-hangs-when-you-quit-it
Looking at the second part of your comment, I think there was a misunderstood : it does not happen when you are "really" in the browser with the tabs and so on but before, on the profile manager if you start the browser with the option for it (I don't have the name of the option in mind, but you have to give it on the shell line).
For my part I always start my browser with this option as I unchecked the "use the selected profile by default" option.
So the described problem happen on this profile selector, not after.
About safe mode, my nightly is pretty much clean of everything.
See first screenshot here:
https://support.mozilla.org/en-US/kb/profile-manager-create-and-remove-firefox-profiles
See the joined screenshot too.
See
https://developer.mozilla.org/en-US/docs/Mozilla/Multiple_Firefox_Profiles
or
https://developer.mozilla.org/en-US/docs/Profile_Manager
about this profile manager.
| Reporter | ||
Comment 4•11 years ago
|
||
Just NI you, in case, as I added the informations you required.
Flags: needinfo?(lhenry)
Comment 5•11 years ago
|
||
Florin can you confirm? I gave this a try with current nightly and MacOS 10.10 but couldn't reproduce it. Thanks!
Flags: needinfo?(lhenry) → needinfo?(florin.mezei)
Comment 6•11 years ago
|
||
I can actually reproduce this by doing the following:
1. Start Firefox with option to ask for profile selection.
2. While the Profile manager window displays (and in focus) try the following:
a) CMD + Q
b) in menubar: Firefox -> Quit Firefox
c) right click on Firefox icon on the bottom bar and select Quit
All actions at step #2 produce no results (I cannot reproduce the freeze). I see this on Mac OS X 10.7.5, 10.9.5 and 10.10, with Firefox 39 nightly, 38 Aurora, and all sorts of older release versions . The only way to close the Profile Manager window is by using its "x" or "Exit" button.
Oddly, I see this back to Firefox 4.0.1, so it seems this behaviour has been around for quite a while, but I didn't find any bug on it, so probably people didn't care much about it.
Flags: needinfo?(florin.mezei)
| Reporter | ||
Comment 7•11 years ago
|
||
(In reply to Florin Mezei, QA (:FlorinMezei) from comment #6)
> I can actually reproduce this by doing the following:
> 1. Start Firefox with option to ask for profile selection.
> 2. While the Profile manager window displays (and in focus) try the
> following:
> a) CMD + Q
> b) in menubar: Firefox -> Quit Firefox
> c) right click on Firefox icon on the bottom bar and select Quit
>
> All actions at step #2 produce no results (I cannot reproduce the freeze). I
> see this on Mac OS X 10.7.5, 10.9.5 and 10.10, with Firefox 39 nightly, 38
> Aurora, and all sorts of older release versions . The only way to close the
> Profile Manager window is by using its "x" or "Exit" button.
>
> Oddly, I see this back to Firefox 4.0.1, so it seems this behaviour has been
> around for quite a while, but I didn't find any bug on it, so probably
> people didn't care much about it.
So, I don't know what can cause this different behavior between stable and nightly on my current laptop, as I just checked again right now and still can notice the same thing: nothing happen on stable while it is resulting in a total freeze on today's nightly.
It's running on OS X 10.9.4, though I don't think it's changing something, as for profiles as this is before you even run any profile.
| Reporter | ||
Comment 8•11 years ago
|
||
Hi Florin, got some news on this?
I still can see it in Nightly 42.
Flags: needinfo?(florin.mezei)
Comment 9•11 years ago
|
||
I've tried this again today, and now I can in fact quit using Cmd+Q, but still cannot quit using the menu options.
Steps to reproduce:
1. Start Firefox with option to ask for profile selection.
2. While the Profile manager window displays (and in focus) try the following:
a) CMD + Q
b) in top menubar: Firefox -> Quit Firefox
c) right click on Firefox icon on the bottom bar and select Quit
Expected results: 2a), 2b), and 2c) all successfully quit the Profile Manager.
Actual results:
- 2a) quits the Profile Manager
- 2b) and 2c) do not quit the Profile Manager
I still cannot reproduce the hang you reported Clément, but I'm confirming this for the existing issues and see if anyone has any ideas on this.
Reproduced with:
- Firefox 39.0 - BuildID: 20150630154324
- Firefox 40.0b2 - BuildID: 20150713153304
- latest Firefox 41 Aurora - BuildID: 20150714004006
- latest Firefox 42 Nightly - BuildID: 20150714030206
Reproduced on: Mac OS X 10.9.5 & 10.8.5
Status: UNCONFIRMED → NEW
status-firefox39:
--- → affected
status-firefox40:
--- → affected
status-firefox41:
--- → affected
status-firefox42:
--- → affected
Ever confirmed: true
Flags: needinfo?(florin.mezei)
| Reporter | ||
Comment 10•11 years ago
|
||
Florin, is there maybe a way to gather debug informations in console to understand this behavior? I tried to check with `firefox --help` possible options, but seen nothing like a `-d`, `--debug` option to have complete and useful informations in console.
So, did I missed something?
(I could of course film it, but it would not help at all to understand why is it having this behavior)
Flags: needinfo?(florin.mezei)
Comment 11•11 years ago
|
||
I'm afraid I don't know of any way to gather useful information here. But maybe some of the developers in this area do. Let's see if this gets some attention... as I've said, I think this has a low impact on users, so it may be treated with lower priority.
Filming this would indeed not help.
Flags: needinfo?(florin.mezei)
Updated•3 years ago
|
Severity: normal → S3
| Assignee | ||
Comment 12•2 years ago
|
||
This adds a native fallback menu for early startup modals (e.g.
ProfileManager/ProfileDowngrade) which consists of a "Quit" menu item only,
allowing users to quit the app in a regular way (cmd+Q).
According to the bug report the "Quit" menu item used to exist but caused a
crash. With this patch crash doesn't repro anymore.
Updated•2 years ago
|
Assignee: nobody → seb-bugzilla
Status: NEW → ASSIGNED
Updated•2 years ago
|
Attachment #9359562 -
Attachment is obsolete: true
Updated•2 years ago
|
Attachment #9359562 -
Attachment is obsolete: false
Comment 13•2 years ago
|
||
Pushed by spohl@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bec6b1e2c240
macOS: Add fallback menu bar for early startup modals. r=mac-reviewers,spohl
Comment 14•2 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
status-firefox121:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 121 Branch
Updated•2 years ago
|
Flags: qe-verify+
Comment 15•2 years ago
|
||
Verified as fixed on Firefox 121.0b1 and the latest Nightly 122.0a1 on macOS 11.7 - the Profile Manager successfully quits when pressing CMD+Q or when using the menubar items (selecting Quit - from the upper menubar or from right-clicking on the Firefox app in the taskbar).
Status: RESOLVED → VERIFIED
Updated•2 years ago
|
Flags: qe-verify+
Updated•2 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•