Bug 1107433 - macOS: Add fallback menu bar for early startup modals. r=mac-reviewers,spohl

This adds a native fallback menu for early startup modals (e.g.
ProfileManager/ProfileDowngrade) which consists of a "Quit" menu item only,
allowing users to quit the app in a regular way (cmd+Q).

According to the bug report the "Quit" menu item used to exist but caused a
crash. With this patch crash doesn't repro anymore.

Differential Revision: https://phabricator.services.mozilla.com/D191525